WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249567
[IFC][hanging punctuation] Line::appendTextContent should take leading punctuation into account
https://bugs.webkit.org/show_bug.cgi?id=249567
Summary
[IFC][hanging punctuation] Line::appendTextContent should take leading punctu...
alan
Reported
2022-12-18 19:41:21 PST
ssia
Attachments
Patch
(21.79 KB, patch)
2022-12-18 19:51 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(22.66 KB, patch)
2022-12-18 20:23 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-12-18 19:51:27 PST
Created
attachment 464098
[details]
Patch
alan
Comment 2
2022-12-18 20:23:33 PST
Created
attachment 464099
[details]
[fast-cq]Patch
EWS
Comment 3
2022-12-19 05:52:26 PST
Committed
258078@main
(bb7f2ddd047c): <
https://commits.webkit.org/258078@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464099
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-12-19 05:53:15 PST
<
rdar://problem/103513167
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug